chore: 项目重命名为 super_opencode，更新所有 GitHub 链接，删除 install.sh

--- a/config-app/package.json
+++ b/config-app/package.json
@@ -43,7 +43,7 @@
     "publish": {
       "provider": "github",
       "owner": "lengjingxu",
-      "repo": "oh-my-opencode-releases",
+      "repo": "super_opencode",
       "releaseType": "release"
     },
     "directories": {
