--- a/config-app/package.json
+++ b/config-app/package.json
@@ -1,6 +1,6 @@
 {
   "name": "super-opencode",
-  "version": "1.3.3",
+  "version": "1.3.0",
   "description": "Super OpenCode 配置管理中心",
   "main": "main.js",
   "scripts": {
@@ -95,6 +95,7 @@
         {
           "target": "dmg",
           "arch": [
+            "universal",
             "x64",
             "arm64"
           ]
@@ -102,6 +103,7 @@
         {
           "target": "zip",
           "arch": [
+            "universal",
             "x64",
             "arm64"
           ]
