--- a/config-app/package.json
+++ b/config-app/package.json
@@ -34,8 +34,7 @@
     "png-to-ico": "^3.0.1"
   },
   "dependencies": {
-    "electron-updater": "^6.7.3",
-    "vue": "^3.4.0"
+    "electron-updater": "^6.7.3"
   },
   "build": {
     "appId": "com.superopencode.config",
